# rust-quote-api

./: .env.dist  Cargo.toml  Makefile  README.md  build.rs  docker-compose.local.yml
cli/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
contracts/: instruments.proto  marketdata.proto  operations.proto  orders.proto  sandbox.proto  stoporders.proto  users.proto
migrations/2022-08-29-124813_create_quote/: down.sql  up.sql
migrations/2022-08-29-124813_create_share/: down.sql  up.sql
migrations/2022-09-19-133842_create_candle/: down.sql  up.sql
server/: Cargo.toml  Rocket.toml
src/: lib.rs  model.rs  schema.rs
src/candle/: entity.rs
src/share/: entity.rs  repository.rs
src/tinkoff/: mod.rs
