[package]
name = "quote-api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.22"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
prost = "0.11.0"
prost-types = "0.11.1"
rocket = "0.5.0-rc.2"
tonic = { version = "0.8.1", features = ["gzip", "tls", "tls-roots"] }
tokio = "1.21.0"

[build-dependencies]
tonic-build = "0.8.0"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
